# rhea-go-llm-analysis

./: Makefile  README.md  pyproject.toml
data/: go.sssom.tsv
notebooks/: Summary.ipynb  utils.py
notebooks/output/: unpivoted-filtered.csv
results/: llm-validate-go-mf.claude-3-opus.generic.jsonl  llm-validate-go-mf.gemini-pro.generic.jsonl  llm-validate-go-mf.gpt-4.generic.jsonl  llm-validate-go-mf.gpt3t.prompted.jsonl  llm-validate-go-mf.gpt4full.generic.jsonl  llm-validate-go-mf.groq-llama.generic.jsonl  llm-validate-go-mf.groq-mixtral.generic.jsonl  llm-validate-go-mf.groq-mixtral.prompted.jsonl  llm-validate-go-mf.mistral-large.prompted.jsonl  llm-validate-go-mf.mixtral.prompted.jsonl
templates/: ind.j2
